fix z-index header

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -957,7 +957,8 @@ html {
 
 .header {
   position: fixed;
-  width: 100%; }
+  width: 100%;
+  z-index: 10; }
 
 .header.scroll {
   background-color: #FFF;
