--- a/scss/inc/__header.scss
+++ b/scss/inc/__header.scss
@@ -5,6 +5,7 @@ html {
 .header {
     position: fixed;
     width: 100%;
+    z-index: 10;
 }
 
 .header.scroll {
